# bevy_image_font

./: .gitignore  .prettierrc  CHANGELOG.md  Cargo.toml  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: CI.yml  DraftNewRelease.yml  PublishNewRelease.yml
assets/: bmf.bin.fnt  bmf.bmfc  bmf.txt.fnt  bmf.xml.fnt
examples/: atlased_sprite.rs  bevy_ui.rs  bmf.rs  rendered_sprite.rs  rendered_ui.rs  sprite.rs
examples/common/: mod.rs
src/: atlas_sprites.rs  filtered_string.rs  letter_spacing.rs  lib.rs  loader.rs  loader_fnt.rs  render_context.rs  rendered.rs  scaling_mode.rs  tests.rs
src/atlas_sprites/: anchors.rs  gizmos.rs  letter_spacing.rs  render_context.rs  scaling_mode.rs
src/atlas_sprites/render_context/: tests.rs
src/filtered_string/: tests.rs
src/loader/: bmf.rs  tests.rs
src/loader/tests/: image_font_descriptor.rs  image_font_layout.rs  image_font_loader.rs
src/render_context/: anchors.rs  filtered_string.rs  tests.rs
src/render_context/filtered_string/: tests.rs
src/tests/: sync_texts_with_font_changes.rs  utils.rs
tests/: visual-acceptance-testing.rs
tests/images/: .gitignore
tests/setup/: mod.rs
