[package]
name = "bevy_image_font"
version = "0.6.0"
edition = "2021"
authors = [
    "Ash <ext0l@catgirl.ai>",
    "Alexander Krivács Schrøder <alexschrod@gmail.com>",
]
categories = ["game-development"]
description = "Render pixel fonts from PNGs in Bevy."
keywords = ["gamedev", "bevy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ilyvion/bevy_image_font"

[features]
default = ["ui", "rendered", "atlas_sprites"]
atlas_sprites = []
gizmos = ["bevy/bevy_gizmos"]
rendered = ["dep:image"]
ui = ["rendered", "bevy/bevy_ui"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_sprite",
] }
bevy_image = "0.15"
derive_setters = "0.1.6"
ron = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"

[dependencies.image]
version = "0.24.9"
default-features = false
features = ["png"]
optional = true

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_sprite",
    "bevy_core_pipeline",
    "bevy_window",
    "multi_threaded",
    "png",
    "x11",
] }
bevy_asset_loader = { version = "0.22.0", features = ["2d"] }

[[example]]
name = "rendered_ui"
required-features = ["rendered", "ui"]

[[example]]
name = "rendered_sprite"
required-features = ["rendered"]

[[example]]
name = "atlased_sprite"
required-features = ["atlas_sprites"]
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"
